force-app/main/default/objects/Daily_Sales_Summary__c/Daily_Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>Daily Sales Summary</label>
    <pluralLabel>Daily Sales Summaries</pluralLabel>
    <description>Daily Sales Summary</description>
    <nameField>
        <label>Daily Sales Summary Name</label>
        <type>AutoNumber</type>
        <displayFormat>DSS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>