force-app/main/default/objects/Daily_Sales_Summary__c/fields/Collections_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collections_Amount__c</fullName>
    <label>Collections Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Collections Amount</description>
</CustomField>