force-app/main/default/objects/Daily_Sales_Summary__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Daily Summaries</relationshipLabel>
    <relationshipName>Daily_Summaries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rep</description>
</CustomField>