force-app/main/default/objects/Daily_Sales_Summary__c/fields/Summary_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_Date__c</fullName>
    <label>Summary Date</label>
    <type>Date</type>
    <description>Summary Date</description>
</CustomField>