force-app/main/default/objects/Daily_Sales_Summary__c/fields/Visits_Completed__c.field-meta.xml
<CustomField>
    <fullName>Visits_Completed__c</fullName>
    <label>Visits Completed</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Visits Completed</description>
</CustomField>