force-app/main/default/objects/Daily_Sales_Summary__c/fields/Visits_Planned__c.field-meta.xml
<CustomField>
    <fullName>Visits_Planned__c</fullName>
    <label>Visits Planned</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Visits Planned</description>
</CustomField>